Initial ClientCredentials Redirection

--- a/IdentityServerApi/appsettings.json
+++ b/IdentityServerApi/appsettings.json
@@ -8,15 +8,15 @@
       {
         "ClientId": "Identity",
         "ClientSecrets": [ "SECRETP@$$w0rd" ],
-        "Scopes": [ "identityApi" ]
+        "Scopes": [ "UsersApi" ]
       }
     ],
     "Url": "http://localhost:5001/connect",
-    "Base": "http://localhost:5001/"
+    "Base": "http://localhost:5001/",
+    "ClientCredentials": "http://localhost:5001/connect/token"
   },
   "SwaggerOptions": {
-    "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "Descripcion de mi API",
-    "UIEndpoint": "v1/swagger.json"
+    "UIEndpoint": "/swagger/v1/swagger.json"
   }
 }
