--- a/IdentityServerApi/IdentityServerApi.csproj
+++ b/IdentityServerApi/IdentityServerApi.csproj
@@ -6,6 +6,7 @@
   
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="5.0.0" />
+    <PackageReference Include="IdentityModel" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.13" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
