Added fixes to Client Credentials Token Request.

--- a/IdentityServerApi/appsettings.json
+++ b/IdentityServerApi/appsettings.json
@@ -6,9 +6,9 @@
     "AccessTokenLifetime": 36000,
     "SecurityClients": [
       {
-        "ClientId": "Identity",
-        "ClientSecrets": [ "SECRETP@$$w0rd" ],
-        "Scopes": [ "UsersApi" ]
+        "ClientId": "identity",
+        "ClientSecrets": [ "P@$$w0rd" ],
+        "Scopes": [ "all"]
       }
     ],
     "Url": "http://localhost:5001/connect",
