--- a/IdentityServerApi/IdentityServerApi.csproj
+++ b/IdentityServerApi/IdentityServerApi.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
 
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
 
